# cargo-watchdoc

./: .bumpversion.toml  .gitignore  .goreleaser.yaml  Cargo.toml  README.md  TODO.md  taskfile.yaml
.github/workflows/: release.yaml  test.yaml
src/: main.rs
